#79 - Removing newsletter and updating blog article on 1999 pages

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -2,12 +2,7 @@ h2 About Us
 .content
   .row.center
     .wide-column
-      p
-        | We&apos;re Open Studios, a multi disciplinary digital production studio.
-        br
-        | Creating unique and meaningful experiences since 2019.
-        br
-        | We are a husband and husband team, plus two dogs and a cat.
+      include blocks/paragraph_about
   .row
     .profiles
       .profile
