--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -9,6 +9,20 @@ h2 Blog
               a(href='/blog/2023.html' role="menuitem") 2023
   .row
     .column(style="flex-basis: 55%")
+      a(href='/blog/2025/07/beginners-guide-to-self-hosted-applications.html' target='_blank' title='Beginniners Guide to Self Hosted Applications')
+        h3 Beginniners Guide to Self Hosted Applications
+      p.
+        Our curated guide to using free and open source software (FOSS) to boost your productivity, compliance and competitives.
+      p
+        | Read our 
+        a(href='/blog/2025/07/beginners-guide-to-self-hosted-applications.html' target='_blank' title='Guide to Self Hosted Applications') Guide to Self Hosted Applications
+        | !
+    .column(style="flex-basis: 35%; padding: 1.5rem 0;")
+      a(href='/blog/2025/07/beginners-guide-to-self-hosted-applications.html' target='_blank' title='Guide to Self Hosted Applications')
+        img(src='/assets/blog/2025/07/max-harlynking-_QcLpud-gD0-unsplash-1-1024x683.jpg' style='width: 100%; height: auto; min-height: 107px; object-fit: cover;' alt='A screenshot from the guide')
+
+  .row
+    .column(style="flex-basis: 55%")
       a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective')
         h3 Langenium v6 Retrospective
       p.
