--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -15,7 +15,7 @@
                     h3 The Studio
                     ul(role="menu")
                         li(role="presentation")
-                            a(href='/the_studio.html' role="menuitem") Blog
+                            a(href='/blog.html' role="menuitem") Blog
                         li(role="presentation")
                             a(href='/the_studio.html' role="menuitem") Behind the scenes
                         li(role="presentation")
