#79 - Updating about us timestamp and fixing ampersands

--- a/src/content/what_we_do.pug
+++ b/src/content/what_we_do.pug
@@ -7,7 +7,7 @@ h2 What We Do
           .tile_innercontent
             h3 Research and Development
             p We're building a future-focused studio that uses technology, creativity, and ethical thinking to make things better.
-            p Open Studios is all about project-driven R&D. We make new kinds of interactive media and experiences, and we share the process while we're doing it.
+            p Open Studios is all about project-driven R&amp;D. We make new kinds of interactive media and experiences, and we share the process while we're doing it.
             p Think of it as a digital open studio that is transparent, ongoing, and always evolving.
             p When we figure stuff out, we write it up in guides that might help others too. Everything we make is open source, so anyone can take it, remix it, and build on it.
       .tile
